# News-Category-Prediction-System-

./: pyproject.toml
backend/: main.py
backend/src/schemas/: request.py  response.py
backend/src/utils/: utility.py
frontend/: .env  app.py
frontend/utils/: utility.py
notebooks/: data_preparation.ipynb  data_source_preparation.ipynb  model_building.ipynb
notebooks/Data/: OnlineKhabar_Posts.xlsx  OnlineKhabar_Posts_Final.xlsx
notebooks/Models/: label_encoder.pkl  metadata.json
ref/: Model_Training.ipynb  data_prep_source_code.ipynb  data_src_prep_source_code.ipynb
