[project]
name = "ml-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.138.1",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "wordcloud>=1.9.6",
]
